--- a/public_html/templates/header.html
+++ b/public_html/templates/header.html
@@ -5,8 +5,8 @@
 			<ul class="headernav">
 				<li class="navItem"><a href="/women">Women</a></li>
 				<li class="navItem"><a href="/men">Men</a></li>
-				<li class="navItem"><a href="/about">About Thorne&Spindle</a></li>
-				<li class="navItem"><a href="/contact">Contact Us</a></li>
+				<li class="navItem"><a href="/about">About</a></li>
+				<li class="navItem"><a href="/contact">Contact</a></li>
 				<li class="navItem" id="cartimage"><a href="/cart"><img src = "thecarticon.jpg" alt="cart icon" /></a></li>
 			</ul>
 		</nav>
