--- a/public_html/templates/about.html
+++ b/public_html/templates/about.html
@@ -1,2 +1,100 @@
-<body>
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Thorne&Spindle:About
+		</title>
+		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" />
+		<style>
+		#title {
+			text-decoration: underline;
+		}
+		#description {
+			text-indent: 50px;
+		}
+		body {
+			font-family: Playfair Display;
+		}
+		.kevin {
+			text-align: right;
+		}
+		.sophia {
+			text-align: right;
+		}
+		</style>
+	</head>
+	
+	<body>
+		<div id="title">Company
+		</div>
+		<div id="description">
+			<p>Thorne & Spindle was conjured up from the abyss of extreme depression resulting post-finals. As the four were wallowing in their despair, drowning in fail-fail cake along with unnamed friends, they thought up of the original idea of selling apparel!
+			</p>
+			<p>Thorne & Spindle is based in Irvine, California and was built up from a basement clothing store to a street vendor shop to an online, baller clothing store. Due to its recent conception, circa 2016, the company is looking on for new hires to whip into shape.
+			</p>
+			<p>Please apply by contacting us!
+			</p>
+		</div>
+
+		<div id="title">About Our Products
+		</div>
+		<div id="description">
+			<p>We specialize in bringing new and original designs onto the streets for holistic shoppers to survey and wear with pride. All organic, freshly hand-picked cotton, the smooth and comfortable feeling of the apparel can be found nowhere else in the world. Our clothing inspires mountains to be moved and ballads to be written.
+			</p>
+		</div>
+		<div id="title">Tidbits About Each Stellar Member of Thorne & Spindle
+		</div>
+		<div class="john">"Hashmaps!" - John
+			<ul>
+				<li>
+					Computer Science major at UCI
+				</li>
+				<li>
+					One of the rare specimens of bearded Asian men
+				</li>
+				<li>
+					Enjoys long walks on the beach
+				</li>
+			</ul>
+		</div>
+		<div class="kevin">"Don't tell me what to do!" - Kevin
+			<ul>
+				<li>
+					Computer Science major at UCI
+				</li>
+				<li>
+					A proud and voluptuous Pink Panda fanclub member
+				</li>
+				<li>
+					Enjoys betting his life savings away (CS:GO)
+				</li>
+			</ul>
+		</div>
+		<div class="sam">"Not with that attitude." - Sam
+			<ul>
+				<li>
+					Computer Science major at UCI
+				</li>
+				<li>
+					Inhales Chipotle burritos like a beast
+				</li>
+				<li>
+					LoLer
+				</li>
+			</ul>
+		</div>
+		<div class="sophia">"..." - Sophia
+			<ul>
+				<li>
+					Software Engineer major at UCI
+				</li>
+				<li>
+					Enjoys messing with her cat
+				</li>
+				<li>
+					Sleeping is a hobby
+				</li>
+			</ul>
+		</div>
+
+	</body>
+</html>
