--- a/public_html/templates/about.html
+++ b/public_html/templates/about.html
@@ -14,16 +14,22 @@
 		body {
 			font-family: Playfair Display;
 		}
-		.kevin {
-			text-align: right;
+		.avatar {
+			width: 96px;
+			height: 96px;
 		}
-		.sophia {
+		ul {
+			list-style: none;
+			margin-right: 40px;
+		}
+		.rightBio {
 			text-align: right;
 		}
 		</style>
 	</head>
 	
 	<body>
+
 		<div id="title">Company
 		</div>
 		<div id="description">
@@ -38,12 +44,14 @@
 		<div id="title">About Our Products
 		</div>
 		<div id="description">
-			<p>We specialize in bringing new and original designs onto the streets for holistic shoppers to survey and wear with pride. All organic, freshly hand-picked cotton, the smooth and comfortable feeling of the apparel can be found nowhere else in the world. Our clothing inspires mountains to be moved and ballads to be written.
+			<p>We specialize in bringing new and original designs onto the streets for holistic shoppers to view and wear with pride. All organic, freshly hand-picked cotton, the smooth and comfortable feeling of the apparel can be found nowhere else in the world. Our clothing inspires mountains to be moved and ballads to be written.
 			</p>
 		</div>
 		<div id="title">Tidbits About Each Stellar Member of Thorne & Spindle
 		</div>
-		<div class="john">"Hashmaps!" - John
+		<div class="leftBio">
+			<img src="\assets\images\johnAvatar.jpg" alt="Image of John" >
+			<p>"Hashmaps!" - John</p>
 			<ul>
 				<li>
 					Computer Science major at UCI
@@ -56,7 +64,9 @@
 				</li>
 			</ul>
 		</div>
-		<div class="kevin">"Don't tell me what to do!" - Kevin
+		<div class="rightBio">
+			<img class="avatar" src="\assets\images\kevinAvatar.png" alt="Image of Kevin" >
+			<p>"Don't tell me what to do!" - Kevin</p>
 			<ul>
 				<li>
 					Computer Science major at UCI
@@ -69,7 +79,9 @@
 				</li>
 			</ul>
 		</div>
-		<div class="sam">"Not with that attitude." - Sam
+		<div class="leftBio">
+			<img class="avatar" src="\assets\images\samAvatar.jpg" alt="Image of Sam" >
+			<p>"Not with that attitude." - Sam</p>
 			<ul>
 				<li>
 					Computer Science major at UCI
@@ -82,7 +94,9 @@
 				</li>
 			</ul>
 		</div>
-		<div class="sophia">"..." - Sophia
+		<div class="rightBio">
+			<img class="avatar" src="\assets\images\sophiaAvatar.jpg" alt="Image of Sophia" >
+			<p>"..." - Sophia</p>
 			<ul>
 				<li>
 					Software Engineer major at UCI
