--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -1,3 +1,77 @@
+/* HTML reset */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+.row:before {
+	display: table;
+	content: " ";
+}
+
+.row {
+	margin: 0 auto;
+	width: 960px;
+}
+
+.row:after {
+	clear:both;
+	display: table;
+	content: " ";
+}
+
+.third {
+	position: relative;
+	margin-right: 15px;
+	background-color: #ccc;
+	width: 305px;
+	float: left;
+}
+
+.third:last-child {
+	margin-right: -15px;
+}
+
+
+@media screen and (max-width: 980px){
+	.row {
+		background-color: #000;
+		width: 768px;
+	}
+
+	.third {
+		margin-right: 10px;
+		width: 246px;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.row {
+		background-color: #fff;
+		width: 100%;
+	}
+	.third {
+		width: 100%;
+		float: inherit;
+		display:block;
+	}
+}
+
 img.splash {
 	display: block;
 	margin: 0 auto;
@@ -17,6 +91,11 @@ a.footer {
 	color: white;
 }
 
+
+/** footer **/
+footer .footer {
+
+}
 
 /*****
  about page
