moved internal style sheet to external style sheet

--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -4,3 +4,34 @@ img.splash {
 	max-width: 100%;
 	height: auto;
 }
+
+
+
+/*****
+ about page
+ ****/
+#about-title {
+	text-decoration: underline;
+}
+#about-description {
+	text-indent: 50px;
+}
+#about-body {
+	font-family: Playfair Display;
+}
+.about-avatar {
+	width: 96px;
+	height: 96px;
+}
+.about-ul {
+	list-style: none;
+	margin-right: 40px;
+}
+.about-rightBio {
+	text-align: right;
+}
+
+
+
+
+ 
