--- a/public_html/templates/about.html
+++ b/public_html/templates/about.html
@@ -1,112 +1,62 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Thorne&Spindle:About
-		</title>
+		<title>Thorne&Spindle:About</title>
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" />
-		<style>
-		#title {
-			text-decoration: underline;
-		}
-		#description {
-			text-indent: 50px;
-		}
-		body {
-			font-family: Playfair Display;
-		}
-		.avatar {
-			width: 96px;
-			height: 96px;
-		}
-		ul {
-			list-style: none;
-			margin-right: 40px;
-		}
-		.rightBio {
-			text-align: right;
-		}
-		</style>
+		<link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 	</head>
 	
-	<body>
+	<body id="about-body">
 
-		<div id="title">Company
-		</div>
-		<div id="description">
+		<h1 id="about-title">Company</h1>
+		<div id="about-description">
 			<p>Thorne & Spindle was conjured up from the abyss of extreme depression resulting post-finals. As the four were wallowing in their despair, drowning in fail-fail cake along with unnamed friends, they thought up of the original idea of selling apparel!
 			</p>
 			<p>Thorne & Spindle is based in Irvine, California and was built up from a basement clothing store to a street vendor shop to an online, baller clothing store. Due to its recent conception, circa 2016, the company is looking on for new hires to whip into shape.
 			</p>
-			<p>Please apply by contacting us!
-			</p>
+			<p>Please apply by contacting us!</p>
 		</div>
 
-		<div id="title">About Our Products
-		</div>
-		<div id="description">
+		<h1 id="about-title">About Our Products</h1>
+		<div id="about-description">
 			<p>We specialize in bringing new and original designs onto the streets for holistic shoppers to view and wear with pride. All organic, freshly hand-picked cotton, the smooth and comfortable feeling of the apparel can be found nowhere else in the world. Our clothing inspires mountains to be moved and ballads to be written.
 			</p>
 		</div>
-		<div id="title">Tidbits About Each Stellar Member of Thorne & Spindle
-		</div>
-		<div class="leftBio">
-			<img src="\assets\images\johnAvatar.jpg" alt="Image of John" >
+		<h1 id="about-title">Tidbits About Each Stellar Member</h1>
+		<div class="about-leftBio">
+			<img src="/assets/images/johnAvatar.jpg" alt="Image of John" />
 			<p>"Hashmaps!" - John</p>
-			<ul>
-				<li>
-					Computer Science major at UCI
-				</li>
-				<li>
-					One of the rare specimens of bearded Asian men
-				</li>
-				<li>
-					Enjoys long walks on the beach
-				</li>
+			<ul class="about-ul">
+				<li>Computer Science major at UCI</li>
+				<li>One of the rare specimens of bearded Asian men</li>
+				<li>Enjoys long walks on the beach</li>
 			</ul>
 		</div>
-		<div class="rightBio">
-			<img class="avatar" src="\assets\images\kevinAvatar.png" alt="Image of Kevin" >
+		<div class="about-rightBio">
+			<img class="about-avatar" src="/assets/images/kevinAvatar.png" alt="Image of Kevin" />
 			<p>"Don't tell me what to do!" - Kevin</p>
-			<ul>
-				<li>
-					Computer Science major at UCI
-				</li>
-				<li>
-					A proud and voluptuous Pink Panda fanclub member
-				</li>
-				<li>
-					Enjoys betting his life savings away (CS:GO)
-				</li>
+			<ul class="about-ul">
+				<li>Computer Science major at UCI</li>
+				<li>A proud and voluptuous Pink Panda fanclub member</li>
+				<li>Enjoys betting his life savings away (CS:GO)</li>
 			</ul>
 		</div>
-		<div class="leftBio">
-			<img class="avatar" src="\assets\images\samAvatar.jpg" alt="Image of Sam" >
+		<div class="about-leftBio">
+			<img class="about-avatar" src="/assets/images/samAvatar.jpg" alt="Image of Sam" />
 			<p>"Not with that attitude." - Sam</p>
-			<ul>
-				<li>
-					Computer Science major at UCI
-				</li>
-				<li>
-					Inhales Chipotle burritos like a beast
-				</li>
-				<li>
-					LoLer
-				</li>
+			<ul class="about-ul">
+				<li>Computer Science major at UCI</li>
+				<li>Inhales Chipotle burritos like a beast</li>
+				<li>LoLer</li>
 			</ul>
 		</div>
-		<div class="rightBio">
-			<img class="avatar" src="\assets\images\sophiaAvatar.jpg" alt="Image of Sophia" >
+		<div class="about-rightBio">
+			<img class="about-avatar" src="/assets/images/sophiaAvatar.jpg" alt="Image of Sophia" />
 			<p>"..." - Sophia</p>
-			<ul>
-				<li>
-					Software Engineer major at UCI
-				</li>
-				<li>
-					Enjoys messing with her cat
-				</li>
-				<li>
-					Sleeping is a hobby
-				</li>
+			<ul class="about-ul">
+				<li>Software Engineer major at UCI</li>
+				<li>Enjoys messing with her cat</li>
+				<li>Sleeping is a hobby</li>
 			</ul>
 		</div>
 
