--- a/public_html/templates/header.html
+++ b/public_html/templates/header.html
@@ -7,7 +7,7 @@
 				<li class="navItem"><a href="/men">Men</a></li>
 				<li class="navItem"><a href="/about">About</a></li>
 				<li class="navItem"><a href="/contact">Contact</a></li>
-				<li class="navItem" id="cartimage"><a href="/cart"><img src = "thecarticon.jpg" alt="cart icon" /></a></li>
+				<li class="navItem" id="cartimage"><a href="/cart"><img src = "/assets/images/thecarticon.jpg" alt="cart icon" /></a></li>
 			</ul>
 		</nav>
 	</div>
