--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -147,6 +147,12 @@ li.navItem a{
 	color: #333;
 	border-style:solid;
 	border-color:white;
+	-o-transition:.3s;
+	-ms-transition:.3s;
+	-moz-transition:.3s;
+	-webkit-transition:.3s;
+	/* ...and now for the proper property */
+	transition:.3s;
 }
 
 li.navItem a:link,
