--- a/public_html/templates/contact.html
+++ b/public_html/templates/contact.html
@@ -1,4 +1,45 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Thorne&Spindle:Contact</title>
+		<link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+	</head>
 
+	<body id="contact-body">
+		<h2 id="contact-address">Headquarters</h2>
+		<p>5347 Aldrich Drive,</p>
+		<p>Irvine, CA, 92617</p>
+
+		<h2 id="contact-phone">Phone</h2>
+		<p>(949) 626-4587</p>
+
+		<h2 id="contact-email">Email</h2>
+		<p>contactUs@tns.com</p>
+
+		<h2 id="contact-store-hours">Store Hours</h2>
+		<div class="contact-days">Sunday
+			<div class="contact-time">10:00AM - 8:00PM</div>
+		</div>
+		<div class="contact-days">Monday
+			<div class="contact-time">10:00AM - 9:00PM</div>
+		</div>
+		<div class="contact-days">Tuesday
+			<div class="contact-time">10:00AM - 9:00PM</div>
+		</div>
+		<div class="contact-days">Wednesday
+			<div class="contact-time">10:00AM - 9:00PM</div>
+		</div>
+		<div class="contact-days">Thursday
+			<div class="contact-time">10:00AM - 9:00PM</div>
+		</div>
+		<div class="contact-days">Friday
+			<div class="contact-time">10:00AM - 9:00PM</div>
+		</div>
+		<div class="contact-days">Saturday
+			<div class="contact-time">9:00AM - 9:00PM</div>
+		</div>
+
+		<h2 id="contact-cs-hours">Customer Support Hours</h2>
+		<p>24/7</p>
+	</body>
 </html>
