--- a/public_html/templates/footer.html
+++ b/public_html/templates/footer.html
@@ -15,8 +15,8 @@
 						<br>
 						<form>
 							Join our mailing list!<br>
-							<input type="text" name="donothing">
-							<input type="submit" value="Subscribe"
+							<input class="mailinglist-input" type="text" name="do-nothing" />
+							<button class="mailinglist-subscribe-button">Subscribe</button>
 						</form>
 						
                     </div>
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                 </div>
-			<p style="padding-top:20px;">Copyright  2016 - TNS. All Rights Reserved</p>
+			<p class="copyright">Copyright  2016 - TNS. All Rights Reserved</p>
 
             </div>
         </footer>
