--- a/public_html/templates/contact.html
+++ b/public_html/templates/contact.html
@@ -1,45 +1,57 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Thorne&Spindle:Contact</title>
-		<link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
-	</head>
+<head>
+	<title>Thorne&Spindle:Contact</title>
+	<link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+</head>
 
-	<body id="contact-body">
-		<h2 id="contact-address">Headquarters</h2>
-		<p>5347 Aldrich Drive,</p>
-		<p>Irvine, CA, 92617</p>
+<body>
+	<div class="row">
+		<div id="contact-body">
+			<table>
+				<tr>
+					<td>
+						<h2 id="contact-address">Headquarters</h2>
+						<p>5347 Aldrich Drive,</p>
+						<p>Irvine, CA, 92617</p>
 
-		<h2 id="contact-phone">Phone</h2>
-		<p>(949) 626-4587</p>
+						<h2 id="contact-phone">Phone</h2>
+						<p>(949) 626-4587</p>
 
-		<h2 id="contact-email">Email</h2>
-		<p>contactUs@tns.com</p>
+						<h2 id="contact-email">Email</h2>
+						<p>contactUs@tns.com</p>
+					</td>
+					<td>
+						<table>
+							<tr>
+								<td>
+									<h2 id="contact-store-hours">Store Hours</h2>
 
-		<h2 id="contact-store-hours">Store Hours</h2>
-		<div class="contact-days">Sunday
-			<div class="contact-time">10:00AM - 8:00PM</div>
+									<div class="contact-days">Sunday</div>
+									<div class="contact-days">Monday</div>
+									<div class="contact-days">Tuesday</div>
+									<div class="contact-days">Wednesday</div>
+									<div class="contact-days">Thursday</div>
+									<div class="contact-days">Friday</div>
+									<div class="contact-days">Saturday</div>
+								</td>
+								<td>
+									<div class="contact-time">10:00AM - 8:00PM</div>
+									<div class="contact-time">10:00AM - 9:00PM</div>
+									<div class="contact-time">10:00AM - 9:00PM</div>
+									<div class="contact-time">10:00AM - 9:00PM</div>
+									<div class="contact-time">10:00AM - 9:00PM</div>
+									<div class="contact-time">10:00AM - 9:00PM</div>
+									<div class="contact-time">9:00AM - 9:00PM</div>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+			<h2 id="contact-cs-hours">Customer Support Hours</h2>
+			<p>24/7</p>
 		</div>
-		<div class="contact-days">Monday
-			<div class="contact-time">10:00AM - 9:00PM</div>
-		</div>
-		<div class="contact-days">Tuesday
-			<div class="contact-time">10:00AM - 9:00PM</div>
-		</div>
-		<div class="contact-days">Wednesday
-			<div class="contact-time">10:00AM - 9:00PM</div>
-		</div>
-		<div class="contact-days">Thursday
-			<div class="contact-time">10:00AM - 9:00PM</div>
-		</div>
-		<div class="contact-days">Friday
-			<div class="contact-time">10:00AM - 9:00PM</div>
-		</div>
-		<div class="contact-days">Saturday
-			<div class="contact-time">9:00AM - 9:00PM</div>
-		</div>
-
-		<h2 id="contact-cs-hours">Customer Support Hours</h2>
-		<p>24/7</p>
-	</body>
+	</div>
+</body>
 </html>
