--- a/public_html/templates/header.html
+++ b/public_html/templates/header.html
@@ -3,8 +3,8 @@
 		<h1 class="header-logo-text"> T H O R N E & S P I N D L E </h1>
 		<nav class = "navigationBar">
 			<ul class="headernav">
-				<li class="navItem"><a href="/women">Women</a></li>
-				<li class="navItem"><a href="/men">Men</a></li>
+				<li class="navItem"><a href="/women.html">Women</a></li>
+				<li class="navItem"><a href="/men.html">Men</a></li>
 				<li class="navItem"><a href="/about">About</a></li>
 				<li class="navItem"><a href="/contact">Contact</a></li>
 				<li class="navItem" id="cartimage"><a href="/cart"><img src = "/assets/images/thecarticon.jpg" alt="cart icon" /></a></li>
