--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -242,6 +242,8 @@ li.navItem a:hover {
 	text-align:center;
 	width:400px;
 	font-family: 'Playfair Display', serif;
+	color: black;
+	text-decoration: none;
 }
 
 /*****
