work in progress

--- a/public_html/templates/footer.html
+++ b/public_html/templates/footer.html
@@ -24,17 +24,17 @@
                         <h3 class="footer-header">Connect</h3>
                         <div>
                             <a href="https://twitter.com/justinbieber">
-                                <img src="assets/images/twitter.png" width="20" height="auto"/>     Twitter
+                                <img src="/assets/images/twitter.png" width="20" height="auto"/>     Twitter
                             </a>
                         </div>
                         <div>
                             <a href="https://www.facebook.com/zuck">
-                                <img src="assets/images/facebook.png" width="20" height="auto"/> Facebook
+                                <img src="/assets/images/facebook.png" width="20" height="auto"/> Facebook
                             </a>
                         </div>
                         <div>
                             <a href="https://www.instagram.com/kang_gary8888/">
-                                <img src="assets/images/instagram.png" width="20" height="auto"/> Instagram
+                                <img src="/assets/images/instagram.png" width="20" height="auto"/> Instagram
                             </a>
                         </div>
                     </div>
