--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -234,7 +234,12 @@ li.navItem a:hover {
 	text-align:center;
 }
 
+.header a{
+	text-decoration: none;
+}
+
 .header .header-logo-text{
+	color: black;
 	border-top-style: solid;
 	border-bottom-style: solid;
 	background: #ffffff;
@@ -242,9 +247,9 @@ li.navItem a:hover {
 	text-align:center;
 	width:400px;
 	font-family: 'Playfair Display', serif;
-	color: black;
-	text-decoration: none;
+
 }
+
 
 /*****
  about page
