small fix to footer and product-layout-template first draft

--- a/public_html/templates/footer.html
+++ b/public_html/templates/footer.html
@@ -3,15 +3,15 @@
                 <div class="row">
                     <div class="third">
                         <h3 class="footer-header">Site Map</h3>
-                        <div><a href="comingsoon.html">Women</a></div>
-                        <div><a href="comingsoon.html">Men</a></div>
+                        <div><a href="/women">Women</a></div>
+                        <div><a href="/men">Men</a></div>
                         <div><a href="comingsoon.html">Live Chat</a></div>
                         <div><a href="comingsoon.html">Track Orders</a></div>
                     </div>
                     <div class="third">
                         <h3 class="footer-header">Company Info</h3>
-                        <div><a href="about.html">About Us</a></div>
-                        <div><a href="contact.html">Contact Us</a></div>
+                        <div><a href="/about">About Us</a></div>
+                        <div><a href="/contact">Contact Us</a></div>
 						<br>
 						<form>
 							Join our mailing list!<br>
