--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -306,3 +306,18 @@ contact page
 	text-align: center;
 	padding-left: 50px;
 }
+
+/**** individual products ******/
+.big-image {
+	position: relative;
+	margin-left: 0px;
+	width: auto;
+	float: left;
+	padding-right: 50px;
+}
+
+.big-image-body{
+	position: relative;
+	float: left;
+	width: 400px;
+}
