--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -238,16 +238,17 @@ li.navItem a:hover {
 	text-decoration: none;
 }
 
-.header .header-logo-text{
-	color: black;
+.header .header-logo-text {
 	border-top-style: solid;
 	border-bottom-style: solid;
+	width: 400px;
+	margin: auto;
+}
+.header .header-logo-text a{
+	color: black;
 	background: #ffffff;
-	margin:auto;
 	text-align:center;
-	width:400px;
 	font-family: 'Playfair Display', serif;
-
 }
 
 
