--- a/public_html/templates/header.html
+++ b/public_html/templates/header.html
@@ -1,6 +1,6 @@
 <header>
 	<div class="header">
-		<a href="/"> <h1 class="header-logo-text"> T H O R N E & S P I N D L E </h1> </a>
+		<h1 class="header-logo-text"> <a href="/"> T H O R N E & S P I N D L E </a> </h1>
 		<nav class = "navigationBar">
 			<ul class="headernav">
 				<li class="navItem"><a href="/women">Women</a></li>
