--- a/public_html/templates/footer.html
+++ b/public_html/templates/footer.html
@@ -5,8 +5,7 @@
                         <h3 class="footer-header">Site Map</h3>
                         <div><a href="/women">Women</a></div>
                         <div><a href="/men">Men</a></div>
-                        <div><a href="comingsoon.html">Live Chat</a></div>
-                        <div><a href="comingsoon.html">Track Orders</a></div>
+                        <div><a href="/cart">View Cart</a></div>
                     </div>
                     <div class="third">
                         <h3 class="footer-header">Company Info</h3>
