Added cart page to work with add/remove

--- a/public_html/templates/header.html
+++ b/public_html/templates/header.html
@@ -7,7 +7,11 @@
 				<li class="navItem"><a href="/men">Men</a></li>
 				<li class="navItem"><a href="/about">About</a></li>
 				<li class="navItem"><a href="/contact">Contact</a></li>
-				<li class="navItem" id="cartimage"><a href="/cart"><img src = "/assets/images/thecarticon.jpg" alt="cart icon" /><span id="cart-qty"></span></a></li>
+				<li class="navItem" id="cartimage">
+					<a class="cart-icon" href="/cart">
+						<img src = "/assets/images/thecarticon.png" alt="cart icon" /><span id="cart-qty"></span>
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</div>
