--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -191,6 +191,10 @@ ul.headernav li a {
 	text-decoration: none;
 }
 
+ul.headernav li a.cart-icon {
+	padding: 7px 16px 10px 16px;
+}
+
 ul.headernav {
 	list-style-type: none;
 	margin: 0;
@@ -361,4 +365,31 @@ contact page
 .cart-description {
 	float:left;
 	margin-left: 50px;
+}
+
+.cart-empty {
+	text-align: center;
+	margin-top:200px;
+	margin-bottom: 400px;
+}
+
+.product-name {
+	font-weight: 600;
+}
+
+.product-brand {
+	font-style: italic;
+}
+
+.btn {
+	margin-top: 5px;
+	padding:5px;
+	background-color: #eee;
+	border: 1px solid #555;
+	transition: 1s ease;
+}
+
+.btn:hover {
+	background-color: #DCF0F7;
+	box-shadow: 3px 3px 5px #ccc;
 }
