--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -316,6 +316,47 @@ contact page
 	padding-left: 50px;
 }
 
+/* checkout page */
+#checkout-form {
+	margin-right: auto;
+	margin-left: auto;
+}
+#checkout-table {
+	width: 600px;
+	margin-right: auto;
+	margin-left: auto;
+}
+#checkout-order-summary {
+	text-align: center;
+}
+#zipId {
+	width: 12%;
+}
+#phone-area {
+	width: 7%;
+	text-align: center;
+}
+#phone-first3 {
+	width: 7%;
+	text-align: center;
+}
+#phone-last4 {
+	width: 8%;
+	text-align: center;
+}
+#expMonthId {
+	width: 6%;
+	text-align: center;
+}
+#expYearId {
+	width: 6%;
+	text-align: center;
+}
+#csvCscId {
+	width: 12%;
+	text-align: center;
+}
+
 /**** individual products ******/
 .big-image {
 	position: relative;
