--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -300,9 +300,7 @@ li.navItem a:hover {
 }
  
 
-/*
-contact page
-*/
+/* contact page */
 #contact-table {
 	margin-right: auto;
 	margin-left: auto;
