TS-53 fixed form validation and clear checkout cart

--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -440,6 +440,10 @@ li.navItem a:hover {
 	color: red;
 }
 
+.p-error {
+	margin-botton:5px;
+}
+
 @media screen and (max-width: 768px) {
 	#errors {
 		padding:10px;
