--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -497,13 +497,32 @@ button.big-btn:hover {
 
 
 #searchContainer{
-	position: relative
+	position: relative;
 }
 
 #searchResults{
+	z-index:99999;
 	position: absolute;
     right: 0;
     top: 0;
-    z-index: 10;
+    text-align: center;
+    width:100%;
+
+ 
+}
+
+#searchResults p{
+	background-color: #FFFFFF;
+    color:  #E3E5DD;
+    font-size: 14px;
+    display: block;
+    width: 100%;
+    margin: -10px 0px 8px -10px;
+    padding: 5px 10px;
+    transition: 0.4s ease;
+}
+
+#searchResults p:hover{
+	background-color:#e6e6ff;
 }
 
